@startuml HistoRando_ERD

!define TABLE(name) entity name << (T,#FFAAAA) >>
!define PRIMARY_KEY(x) <b><color:#FF0000>x</color></b>
!define FOREIGN_KEY(x) <color:#0000FF>x</color>

' Entity: User
entity "User" as user {
  * PRIMARY_KEY(user_id) : INT
  --
  * username : VARCHAR(100)
  * email : VARCHAR(255)
  * password_hash : VARCHAR(255)
  * first_name : VARCHAR(100)
  * last_name : VARCHAR(100)
  * registration_date : DATETIME
  * is_pmr : BOOLEAN
  * total_points : INT
  * total_km : DECIMAL
  avatar_url : VARCHAR(255)
  phone_number : VARCHAR(20)
}

' Entity: Parcours (Trail/Route)
entity "Parcours" as parcours {
  * PRIMARY_KEY(parcours_id) : INT
  --
  * name : VARCHAR(200)
  * description : TEXT
  * difficulty_level : ENUM('easy','medium','hard')
  * distance_km : DECIMAL
  * estimated_duration : INT
  * is_pmr_accessible : BOOLEAN
  * historical_theme : VARCHAR(255)
  * starting_point_lat : DECIMAL
  * starting_point_lon : DECIMAL
  * creation_date : DATETIME
  * is_active : BOOLEAN
  gpx_file_url : VARCHAR(255)
  image_url : VARCHAR(255)
}

' Entity: PointOfInterest (POI)
entity "PointOfInterest" as poi {
  * PRIMARY_KEY(poi_id) : INT
  --
  * FOREIGN_KEY(parcours_id) : INT
  * name : VARCHAR(200)
  * description : TEXT
  * poi_type : ENUM('bunker','blockhaus','memorial','museum','beach','monument')
  * latitude : DECIMAL
  * longitude : DECIMAL
  * historical_period : VARCHAR(100)
  * order_in_parcours : INT
  qr_code : VARCHAR(255)
  image_url : VARCHAR(255)
  audio_url : VARCHAR(255)
}

' Entity: Podcast
entity "Podcast" as podcast {
  * PRIMARY_KEY(podcast_id) : INT
  --
  * title : VARCHAR(200)
  * description : TEXT
  * duration_seconds : INT
  * audio_file_url : VARCHAR(255)
  * narrator : VARCHAR(100)
  * creation_date : DATETIME
  * language : VARCHAR(10)
  thumbnail_url : VARCHAR(255)
}

' Entity: Quiz
entity "Quiz" as quiz {
  * PRIMARY_KEY(quiz_id) : INT
  --
  * title : VARCHAR(200)
  * description : TEXT
  * difficulty : ENUM('easy','medium','hard')
  * points_reward : INT
  * creation_date : DATETIME
  * is_active : BOOLEAN
}

' Entity: Question
entity "Question" as question {
  * PRIMARY_KEY(question_id) : INT
  --
  * FOREIGN_KEY(quiz_id) : INT
  * question_text : TEXT
  * correct_answer : VARCHAR(255)
  * question_order : INT
  * points : INT
}

' Entity: Answer
entity "Answer" as answer {
  * PRIMARY_KEY(answer_id) : INT
  --
  * FOREIGN_KEY(question_id) : INT
  * answer_text : VARCHAR(255)
  * is_correct : BOOLEAN
}

' Entity: Challenge
entity "Challenge" as challenge {
  * PRIMARY_KEY(challenge_id) : INT
  --
  * name : VARCHAR(200)
  * description : TEXT
  * challenge_type : ENUM('weighted_backpack','period_clothing','distance','time')
  * points_reward : INT
  * difficulty_multiplier : DECIMAL
  * is_active : BOOLEAN
}

' Entity: TreasureHunt
entity "TreasureHunt" as treasure {
  * PRIMARY_KEY(treasure_id) : INT
  --
  * FOREIGN_KEY(parcours_id) : INT
  * name : VARCHAR(200)
  * description : TEXT
  * target_object : VARCHAR(200)
  * latitude : DECIMAL
  * longitude : DECIMAL
  * scan_radius_meters : INT
  * points_reward : INT
  * qr_code : VARCHAR(255)
  * is_active : BOOLEAN
}

' Entity: Reward
entity "Reward" as reward {
  * PRIMARY_KEY(reward_id) : INT
  --
  * name : VARCHAR(200)
  * description : TEXT
  * points_cost : INT
  * reward_type : ENUM('discount','gift','badge','premium_content')
  * partner_name : VARCHAR(200)
  * stock_quantity : INT
  * image_url : VARCHAR(255)
  * is_available : BOOLEAN
}

' Entity: UserActivity
entity "UserActivity" as activity {
  * PRIMARY_KEY(activity_id) : INT
  --
  * FOREIGN_KEY(user_id) : INT
  * FOREIGN_KEY(parcours_id) : INT
  * start_datetime : DATETIME
  * end_datetime : DATETIME
  * distance_covered_km : DECIMAL
  * activity_type : ENUM('walking','running','cycling')
  * points_earned : INT
  * status : ENUM('in_progress','completed','abandoned')
  average_speed : DECIMAL
  gpx_trace_url : VARCHAR(255)
}

' Entity: UserPOIVisit
entity "UserPOIVisit" as poi_visit {
  * PRIMARY_KEY(visit_id) : INT
  --
  * FOREIGN_KEY(user_id) : INT
  * FOREIGN_KEY(poi_id) : INT
  * FOREIGN_KEY(activity_id) : INT
  * visit_datetime : DATETIME
  * scanned_qr : BOOLEAN
  * listened_audio : BOOLEAN
  * points_earned : INT
}

' Entity: UserQuizAttempt
entity "UserQuizAttempt" as quiz_attempt {
  * PRIMARY_KEY(attempt_id) : INT
  --
  * FOREIGN_KEY(user_id) : INT
  * FOREIGN_KEY(quiz_id) : INT
  * attempt_datetime : DATETIME
  * score : INT
  * points_earned : INT
  * time_taken_seconds : INT
}

' Entity: UserChallengeProgress
entity "UserChallengeProgress" as challenge_progress {
  * PRIMARY_KEY(progress_id) : INT
  --
  * FOREIGN_KEY(user_id) : INT
  * FOREIGN_KEY(challenge_id) : INT
  * FOREIGN_KEY(activity_id) : INT
  * start_datetime : DATETIME
  * completion_datetime : DATETIME
  * status : ENUM('started','completed','failed')
  * points_earned : INT
}

' Entity: UserTreasureFound
entity "UserTreasureFound" as treasure_found {
  * PRIMARY_KEY(found_id) : INT
  --
  * FOREIGN_KEY(user_id) : INT
  * FOREIGN_KEY(treasure_id) : INT
  * found_datetime : DATETIME
  * points_earned : INT
}

' Entity: UserRewardRedeemed
entity "UserRewardRedeemed" as reward_redeemed {
  * PRIMARY_KEY(redemption_id) : INT
  --
  * FOREIGN_KEY(user_id) : INT
  * FOREIGN_KEY(reward_id) : INT
  * redemption_datetime : DATETIME
  * points_spent : INT
  * status : ENUM('pending','redeemed','used')
  redemption_code : VARCHAR(100)
}

' Entity: ParcoursPodcast (Many-to-Many relationship)
entity "ParcoursPodcast" as parcours_podcast {
  * PRIMARY_KEY(id) : INT
  --
  * FOREIGN_KEY(parcours_id) : INT
  * FOREIGN_KEY(podcast_id) : INT
  * play_order : INT
  * suggested_km : DECIMAL
}

' Entity: ParcoursQuiz (Many-to-Many relationship)
entity "ParcoursQuiz" as parcours_quiz {
  * PRIMARY_KEY(id) : INT
  --
  * FOREIGN_KEY(parcours_id) : INT
  * FOREIGN_KEY(quiz_id) : INT
  * unlock_at_km : DECIMAL
}

' Entity: HistoricalBattalion
entity "HistoricalBattalion" as battalion {
  * PRIMARY_KEY(battalion_id) : INT
  --
  * name : VARCHAR(200)
  * country : VARCHAR(100)
  * military_unit : VARCHAR(200)
  * period : VARCHAR(100)
  * description : TEXT
}

' Entity: BattalionRoute
entity "BattalionRoute" as battalion_route {
  * PRIMARY_KEY(route_id) : INT
  --
  * FOREIGN_KEY(battalion_id) : INT
  * FOREIGN_KEY(parcours_id) : INT
  * route_date : DATE
  * historical_context : TEXT
}

' Relationships
user ||--o{ activity : "performs"
parcours ||--o{ activity : "contains"
parcours ||--o{ poi : "has"
parcours ||--o{ treasure : "includes"
parcours ||--o{ parcours_podcast : "features"
parcours ||--o{ parcours_quiz : "includes"
parcours ||--o{ battalion_route : "follows"

podcast ||--o{ parcours_podcast : "available in"
quiz ||--o{ parcours_quiz : "used in"
quiz ||--o{ question : "contains"
question ||--o{ answer : "has"

user ||--o{ poi_visit : "visits"
poi ||--o{ poi_visit : "visited by"
activity ||--o{ poi_visit : "includes"

user ||--o{ quiz_attempt : "attempts"
quiz ||--o{ quiz_attempt : "attempted by"

user ||--o{ challenge_progress : "completes"
challenge ||--o{ challenge_progress : "tracked by"
activity ||--o{ challenge_progress : "includes"

user ||--o{ treasure_found : "finds"
treasure ||--o{ treasure_found : "found by"

user ||--o{ reward_redeemed : "redeems"
reward ||--o{ reward_redeemed : "redeemed by"

battalion ||--o{ battalion_route : "has"

@enduml
